2007-02-19  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* config/cris/cris.c (cris_movem_load_rest_p, cris_store_multiple_op_p)
	(cris_print_index, cris_print_operand, cris_print_operand_address)
	(cris_reload_address_legitimized, cris_rtx_costs, cris_address_cost)
	(cris_side_effect_mode_ok, cris_valid_pic_const, cris_split_movdx)
	(cris_expand_pic_call_address): Use xxx_P predicate macros instead of
	GET_CODE () == xxx.
	* config/cris/cris.h (SECONDARY_RELOAD_CLASS, EXTRA_CONSTRAINT_Q,
	EXTRA_CONSTRAINT_T, BDAP_INDEX_P, BIAP_INDEX_P, SIMPLE_ADDRESS_P,
	GO_IF_LEGITIMATE_ADDRESS): Ditto.
	* config/cris/cris.md (define_insns: *btst, movdi, *mov_side<mode>)
	(*mov_sidesisf, *mov_side<mode>_mem, *mov_sidesisf_mem)
	(*clear_side<mode>, movsi, *movsi_internal, *ext_sideqihi)
	(*ext_side<mode>si, *op_side<mode>, *op_swap_side<mode>, addsi3)
	(*extopqihi_side, *extop<mode>si_side, *extopqihi_swap_side)
	(*extop<mode>si_swap_side, addi_mul, *addi,andsi3, andhi3, ashl<mode>3)
	(uminsi3, call, call_value): Ditto.
	(define_split: indir_to_reg_split, unnamed): Ditto.

2007-02-19  Dorit Nuzman  <dorit@il.ibm.com>

	PR tree-optimization/30975
	* tree-vect-trasnform.c (vect_get_vec_def_for_stmt_copy): Remove
	wrong assert.

2007-02-18  Eric Christopher  <echristo@gmail.com>

	* mips.c (mips_prepare_builtin_arg): Add argnum parameter.
	Remove use of arglist.
	(mips_expand_builtin): Remove use of arglist, pass in expr.
	(mips_expand_builtin_direct): Rewrite handling for arglist removal.
	(mips_expand_builtin_movtf): Ditto.
	(mips_expand_builtin_compare): Ditto.

2007-02-19  Alexandre Oliva  <aoliva@redhat.com>

	* tree-sra.c (sra_build_assignment): Replace assertion
	checking with a comment explaining why it can't be done.

2007-02-18  Sandra Loosemore  <sandra@codesourcery.com>

	PR middle-end/30833
	* tree-dump.c (dequeue_and_dump): Add tcc_vl_exp case missed
	during CALL_EXPR representation conversion.
	* tree-ssa-propagate.c (set_rhs): Likewise.
